<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MensualidadDetalleActivity">

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/CodMensualidad"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvCodMensualidadMen"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/colorAzul"
            android:layout_height="40dp"
            android:text="@string/descripcion"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvDescripcionMen"/>


        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/monto"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvMontoMen"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/vencimiento"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvVencimientoMen"/>


        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/Cod_Rescripcion"
            android:textColor="@color/colorAzul"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvCodRescripcionMen"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/estado"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvEstadoMen"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorBlanco"
        android:background="@drawable/txt_circular"
        android:id="@+id/btnPagarMen"
        android:text="@string/Pagar"/>

</LinearLayout>