<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosAlumnoActivity">

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/nombresAlumno"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvNombAlumno"/>




        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/apellidosAlumno"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvApeAlumno"/>




        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/Grado"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvGrado"/>


        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/Seccion"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvSeccion"/>


        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAzul"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/PrimSec"/>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tvPrimSec"/>


</LinearLayout>