<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".PagoMen1Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TituloTarjeta"
        android:textStyle="bold"
        android:textColor="@color/colorAzul"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/tarjetas"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/colorAzul"
        android:layout_marginBottom="10dp">

    <EditText
        android:layout_width="300dp"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:textColor="@color/colorAzul"
        android:hint="@string/numeroTarjeta"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="left"
        android:textColorHint="@color/colorAzul">

    <EditText
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:focusable="false"
        android:textColor="@color/colorAzul"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        android:textSize="20dp"
        android:id="@+id/idMesAnio"
        android:hint="@string/mesAnio"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:textColorHint="@color/colorAzul">
    <EditText
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:layout_gravity="left"
        android:textColor="@color/colorAzul"
        android:inputType="number"
        android:textSize="20dp"
        android:hint="@string/CVV"/>
    </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorAzul">
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColor="@color/colorAzul"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:hint="@string/nombreTitularTarjeta"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorAzul">
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColor="@color/colorAzul"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        android:hint="@string/correo"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="140dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAzul">
    <Spinner
        android:id="@+id/sp_tipoDoc"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:textColor="@color/colorAzul"
        android:inputType="none"
        android:textSize="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:textColorHint="@color/colorAzul">

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:textColor="@color/colorAzul"
        android:maxLength="8"
        android:hint="@string/numeroDocumento"/>
</android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPagarMensualidad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:background="@drawable/txt_circular"
        android:fontFamily="@string/appbar_scrolling_view_behavior"
        android:padding="12dp"
        android:text="@string/btnPagar"
        android:textColor="@color/colorBlanco"/>

</LinearLayout>