<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="52dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/colorBlanco"
        android:text="@string/jeanPiaget"
        />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher_foreground"
                android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorBlanco">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:maxLength="7"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:hint="@string/valetUsuario"
            android:textColor="@color/colorBlanco" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorBlanco"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorBlanco">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valetPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorBlanco" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_circular"
        android:fontFamily="@string/appbar_scrolling_view_behavior"
        android:padding="12dp"
        android:text="@string/valbtnIngresar"
        android:textStyle="bold"
        android:textColor="@color/colorAzul">

    </android.support.v7.widget.AppCompatButton>

        </LinearLayout>

    </ScrollView>

</LinearLayout>